# MCP-Server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sample-vault/: Welcome.md
sample-vault/Daily/: 2026-06-24.md
sample-vault/Topics/: MCP.md  Obsidian.md
src/obsidian_mcp/: __init__.py  __main__.py  config.py  server.py
src/obsidian_mcp/utils/: __init__.py  errors.py  pathing.py
src/obsidian_mcp/vault/: __init__.py  models.py  parser.py  reader.py
tests/: conftest.py  test_parser.py  test_pathing.py  test_reader.py  test_server.py
